test/compile-fail/resolution/conflicts/mod/expected.txt
error[E0428]: the name `a` is defined multiple times
  ┌─ ./test/compile-fail/resolution/conflicts/mod/top.rhdl:1:5
  │
1 │ mod a {}
  │     - previous definition of the name `a` here
2 │ mod a {}
  │     ^ `a` redefined here

